_sass/2-layouts/index.sass
.banner-container
  display: flex
  flex-flow: column
  height: 100vh
  justify-content: center
  div
    min-height: 250px
    margin-top: 45px
    background-color: $banner-color
  div:last-child
    margin-bottom: 45px
  div:hover
    background-color: darken($banner-color, 10%)

.banner-container div a p
  display: flex
  height: 250px
  justify-content: center
  align-items: center
  color: $white

